--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,7 @@ image = "0.23"
 memoffset = "0.6"
 takeable-option = "0.5"
 backtrace = "0.3.2"
-lazy_static = "1.0"
-fnv = "1.0.5"
-obj-rs = "0.7.0"
 gltf = "*"
 #nalgebra-glm = "*"
 nalgebra = "*"
-
+regex = "1.5"
