--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 
 [dependencies]
 serde_json = "1.0"
+#serde-serialize = "*"
 glium = "0.30.2"
 image = "0.23"
 memoffset = "0.6"
@@ -23,5 +24,6 @@ gltf = "*"
 nalgebra = "*"
 regex = "1.5"
 #rapier3d = { version = "*", features = [ "simd-stable" ] }
-rapier3d = "0.16.1"
+#rapier3d = "0.16.1"
+rapier3d = "*"
 rand = "*"
